--- a/SkillBAR/Style.css
+++ b/SkillBAR/Style.css
@@ -13,6 +13,16 @@ h2 {
 	text-decoration: underline overline;
 }
 
+#textlinks {
+	text-decoration: none;
+	display: default;
+	text-align: center;
+	padding: 0px;
+	margin-top: 0px;
+	text-decoration: none;
+	list-style-type: none;
+}
+
 ul {
 	list-style-type: none;
 	margin: 0;
@@ -23,19 +33,21 @@ ul {
 
 li {
 	float: left;
+	text-decoration: none;
 }
 
 li a {
 	display: block;
 	text-align: center;
-	color: blue;
+	color: red;
 	padding: 20px 16px 16px;
 	margin-top: 5px;
 	text-decoration: none;
 }
 
-lia:hover {
-	background-color: #111
+li a:hover {
+	background-color: #111;
+	color: white;
 }
 
 .active {
@@ -45,7 +57,7 @@ lia:hover {
 
 .wrapper {
 	background-color: #666;
-	heigth: auto;
+	height: auto;
 	color: gray;
 }
 
@@ -72,6 +84,7 @@ lia:hover {
 	text-align: center;
 	padding-top: 80px;
 	padding-bottom: 200px;
+
 }
 
 p {
@@ -99,3 +112,5 @@ p {
 	float: left;
 	margin-left: 500px;
 }
+
+	
